--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1647,7 +1647,7 @@
     "message": "USDC (Ethereum)"
   },
   "muralpay.rail.usdc-polygon.name": {
-    "message": "USDC (Polygon)"
+    "message": "Crypto (USDC via Polygon)"
   },
   "muralpay.warning.wallet-address": {
     "message": "Double-check your wallet address. Funds sent to an incorrect address cannot be recovered."
