--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -156,7 +156,7 @@
     "defaultMessage": "Last name"
   },
   "form.label.postal-code": {
-    "defaultMessage": "Postal code"
+    "defaultMessage": "Postal code/ZIP code"
   },
   "form.label.state-province": {
     "defaultMessage": "State/province"
