fix: i18n & padding issues

--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -627,7 +627,7 @@
     "message": "Amount"
   },
   "dashboard.creator-withdraw-modal.fee-breakdown-exchange-rate": {
-    "message": "Exchange rate"
+    "message": "FX rate"
   },
   "dashboard.creator-withdraw-modal.fee-breakdown-fee": {
     "message": "Fee"
