--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1967,6 +1967,12 @@
   "servers.backups.item.creating-backup": {
     "message": "Creating backup..."
   },
+  "servers.backups.item.downloading": {
+    "message": "Downloading"
+  },
+  "servers.backups.item.downloading-backup": {
+    "message": "Downloading backup..."
+  },
   "servers.backups.item.failed-to-create-backup": {
     "message": "Failed to create backup"
   },
