--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -702,31 +702,31 @@
     "message": "Confirm your wallet address"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-national-id": {
-    "message": "National ID Number"
+    "message": "National ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-national-id-placeholder": {
     "message": "Enter national ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-passport": {
-    "message": "Passport Number"
+    "message": "Passport number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-passport-placeholder": {
     "message": "Enter passport number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-resident-id": {
-    "message": "Resident ID Number"
+    "message": "Resident ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-resident-id-placeholder": {
     "message": "Enter resident ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-ruc": {
-    "message": "RUC Number"
+    "message": "RUC number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-ruc-placeholder": {
     "message": "Enter RUC number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-tax-id": {
-    "message": "Tax ID Number"
+    "message": "Tax ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-tax-id-placeholder": {
     "message": "Enter tax ID number"
@@ -1548,25 +1548,25 @@
     "message": "Tax ID"
   },
   "muralpay.field.account-number": {
-    "message": "Account Number"
+    "message": "Account number"
   },
   "muralpay.field.account-number-cbu-cvu": {
-    "message": "Account Number (CBU/CVU)"
+    "message": "Account number (CBU/CVU)"
   },
   "muralpay.field.account-number-cci": {
-    "message": "Account Number (CCI)"
+    "message": "Account number (CCI)"
   },
   "muralpay.field.account-number-type": {
-    "message": "Account Number Type"
+    "message": "Account number type"
   },
   "muralpay.field.account-type": {
-    "message": "Account Type"
+    "message": "Account type"
   },
   "muralpay.field.bank-account-number": {
-    "message": "Account Number"
+    "message": "Account number"
   },
   "muralpay.field.branch-code": {
-    "message": "Branch Code"
+    "message": "Branch code"
   },
   "muralpay.field.clabe": {
     "message": "CLABE"
@@ -1581,31 +1581,31 @@
     "message": "CUIT/CUIL"
   },
   "muralpay.field.document-type": {
-    "message": "Document Type"
+    "message": "Document type"
   },
   "muralpay.field.iban": {
     "message": "IBAN"
   },
   "muralpay.field.phone-number": {
-    "message": "Phone Number"
+    "message": "Phone number"
   },
   "muralpay.field.pix-email": {
-    "message": "PIX Email"
+    "message": "PIX email"
   },
   "muralpay.field.pix-key-type": {
-    "message": "PIX Key Type"
+    "message": "PIX key type"
   },
   "muralpay.field.pix-phone": {
-    "message": "PIX Phone"
+    "message": "PIX phone"
   },
   "muralpay.field.routing-number": {
-    "message": "Routing Number"
+    "message": "Routing number"
   },
   "muralpay.field.swift-bic": {
     "message": "SWIFT/BIC"
   },
   "muralpay.field.wallet-address": {
-    "message": "Wallet Address"
+    "message": "Wallet address"
   },
   "muralpay.help.cbu-cvu": {
     "message": "Clave Bancaria Uniforme or Clave Virtual Uniforme"
@@ -1629,7 +1629,7 @@
     "message": "Bank Identifier Code"
   },
   "muralpay.pix-type.bank-account": {
-    "message": "Bank Account"
+    "message": "Bank account"
   },
   "muralpay.pix-type.document": {
     "message": "CPF/CNPJ"
@@ -1638,7 +1638,7 @@
     "message": "Email"
   },
   "muralpay.pix-type.phone": {
-    "message": "Phone Number"
+    "message": "Phone number"
   },
   "muralpay.placeholder.account-number": {
     "message": "Enter account number"
