--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -702,31 +702,31 @@
     "message": "Confirm your wallet address"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-national-id": {
-    "message": "National ID Number"
+    "message": "National ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-national-id-placeholder": {
     "message": "Enter national ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-passport": {
-    "message": "Passport Number"
+    "message": "Passport number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-passport-placeholder": {
     "message": "Enter passport number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-resident-id": {
-    "message": "Resident ID Number"
+    "message": "Resident ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-resident-id-placeholder": {
     "message": "Enter resident ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-ruc": {
-    "message": "RUC Number"
+    "message": "RUC number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-ruc-placeholder": {
     "message": "Enter RUC number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-tax-id": {
-    "message": "Tax ID Number"
+    "message": "Tax ID number"
   },
   "dashboard.creator-withdraw-modal.muralpay-details.document-number-tax-id-placeholder": {
     "message": "Enter tax ID number"
@@ -919,6 +919,42 @@
   },
   "dashboard.withdraw.completion.wallet": {
     "message": "Wallet"
+  },
+  "dashboard.withdraw.error.generic.text": {
+    "message": "We were unable to submit your withdrawal request, please check your details or contact support."
+  },
+  "dashboard.withdraw.error.generic.title": {
+    "message": "Unable to withdraw"
+  },
+  "dashboard.withdraw.error.invalid-address.text": {
+    "message": "The address you provided could not be verified. Please check your address details."
+  },
+  "dashboard.withdraw.error.invalid-address.title": {
+    "message": "Address verification failed"
+  },
+  "dashboard.withdraw.error.invalid-bank.text": {
+    "message": "The bank account details you provided are invalid. Please verify your information."
+  },
+  "dashboard.withdraw.error.invalid-bank.title": {
+    "message": "Invalid bank details"
+  },
+  "dashboard.withdraw.error.invalid-wallet.text": {
+    "message": "The crypto wallet address you provided is invalid. Please double-check and try again."
+  },
+  "dashboard.withdraw.error.invalid-wallet.title": {
+    "message": "Invalid wallet address"
+  },
+  "dashboard.withdraw.error.minimum-not-met.text": {
+    "message": "The withdrawal amount (after fees) doesn't meet the minimum requirement. Please increase your withdrawal amount."
+  },
+  "dashboard.withdraw.error.minimum-not-met.title": {
+    "message": "Amount too low"
+  },
+  "dashboard.withdraw.error.tax-form.text": {
+    "message": "You must complete a tax form to submit your withdrawal request."
+  },
+  "dashboard.withdraw.error.tax-form.title": {
+    "message": "Please complete tax form"
   },
   "error.collection.404.list_item.1": {
     "message": "You may have mistyped the collection's URL."
@@ -1512,25 +1548,25 @@
     "message": "Tax ID"
   },
   "muralpay.field.account-number": {
-    "message": "Account Number"
+    "message": "Account number"
   },
   "muralpay.field.account-number-cbu-cvu": {
-    "message": "Account Number (CBU/CVU)"
+    "message": "Account number (CBU/CVU)"
   },
   "muralpay.field.account-number-cci": {
-    "message": "Account Number (CCI)"
+    "message": "Account number (CCI)"
   },
   "muralpay.field.account-number-type": {
-    "message": "Account Number Type"
+    "message": "Account number type"
   },
   "muralpay.field.account-type": {
-    "message": "Account Type"
+    "message": "Account type"
   },
   "muralpay.field.bank-account-number": {
-    "message": "Account Number"
+    "message": "Account number"
   },
   "muralpay.field.branch-code": {
-    "message": "Branch Code"
+    "message": "Branch code"
   },
   "muralpay.field.clabe": {
     "message": "CLABE"
@@ -1545,31 +1581,31 @@
     "message": "CUIT/CUIL"
   },
   "muralpay.field.document-type": {
-    "message": "Document Type"
+    "message": "Document type"
   },
   "muralpay.field.iban": {
     "message": "IBAN"
   },
   "muralpay.field.phone-number": {
-    "message": "Phone Number"
+    "message": "Phone number"
   },
   "muralpay.field.pix-email": {
-    "message": "PIX Email"
+    "message": "PIX email"
   },
   "muralpay.field.pix-key-type": {
-    "message": "PIX Key Type"
+    "message": "PIX key type"
   },
   "muralpay.field.pix-phone": {
-    "message": "PIX Phone"
+    "message": "PIX phone"
   },
   "muralpay.field.routing-number": {
-    "message": "Routing Number"
+    "message": "Routing number"
   },
   "muralpay.field.swift-bic": {
     "message": "SWIFT/BIC"
   },
   "muralpay.field.wallet-address": {
-    "message": "Wallet Address"
+    "message": "Wallet address"
   },
   "muralpay.help.cbu-cvu": {
     "message": "Clave Bancaria Uniforme or Clave Virtual Uniforme"
@@ -1593,7 +1629,7 @@
     "message": "Bank Identifier Code"
   },
   "muralpay.pix-type.bank-account": {
-    "message": "Bank Account"
+    "message": "Bank account"
   },
   "muralpay.pix-type.document": {
     "message": "CPF/CNPJ"
@@ -1602,7 +1638,7 @@
     "message": "Email"
   },
   "muralpay.pix-type.phone": {
-    "message": "Phone Number"
+    "message": "Phone number"
   },
   "muralpay.placeholder.account-number": {
     "message": "Enter account number"
