--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -866,6 +866,9 @@
   "dashboard.revenue.tos": {
     "message": "By uploading projects to Modrinth and withdrawing money from your account, you agree to our <terms-link>Rewards Program Terms</terms-link>. Learn more about the <info-link>Reward Program</info-link>."
   },
+  "dashboard.revenue.transactions.btn.download-csv": {
+    "message": "Download as CSV"
+  },
   "dashboard.revenue.transactions.header": {
     "message": "Transactions"
   },
