--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -854,8 +854,20 @@
   "dashboard.revenue.processing.tooltip": {
     "message": "Revenue stays in processing until the end of the month, then becomes available 60 days later."
   },
+  "dashboard.revenue.stats.received": {
+    "message": "Received"
+  },
+  "dashboard.revenue.stats.transactions": {
+    "message": "Transactions"
+  },
+  "dashboard.revenue.stats.withdrawn": {
+    "message": "Withdrawn"
+  },
   "dashboard.revenue.tos": {
     "message": "By uploading projects to Modrinth and withdrawing money from your account, you agree to our <terms-link>Rewards Program Terms</terms-link>. Learn more about the <info-link>Reward Program</info-link>."
+  },
+  "dashboard.revenue.transactions.btn.download-csv": {
+    "message": "Download as CSV"
   },
   "dashboard.revenue.transactions.header": {
     "message": "Transactions"
